# mctetris

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/instructions/: cxx.instructions.md
docs/: PRD.md  Plan.md  Screen-Mockups.md
src/: main.cpp
src/model/: active_piece.h  board.cpp  board.h  game_model.cpp  game_model.h  point.h  tetromino.cpp  tetromino.h
